passing to w3schools

--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,17 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+body, html {
+  height: 100%;
+  font-family: "Inconsolata", sans-serif;
+}
+.bgimg {
+  background-position: center;
+  background-size: cover;
+  background-image: url("/images/coffeehouse.jpg");
+  min-height: 75%;
+}
+.menu {
+  display: none;
+}
