first build and remove ugly icons

--- a/src/components/Product.css
+++ b/src/components/Product.css
@@ -1,7 +1,7 @@
 .info{
     display: flex;
     justify-content: space-around;
-    align-content: center;
+    align-content: space-around;
     flex-basis: 10%;
     flex-direction: row;
 }
