--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,10 +1,21 @@
 .bgimg {
-
-    background-image: url(./coffeehouse.jpg);
-    background-position: center;
+    background: url(./coffeehouse.jpg) right;
     background-size: cover;
     min-height: 90%;
     border:1px solid #222222;
 }
 
+#header-title {
+    font-size: 90px;
+    height: 300px
+}
+#header p{
+    visibility: hidden;
+}
 
+@media screen and (max-width: 900px) {
+    #header-title {
+        font-size: 60px;
+        height: 300px
+    }
+}
